# fastapi-kafka-docker-demo

./: Dockerfile  Dockerfile.consumer  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: kafka_producer.py  server.py
worker/: kafka_consumer.py
